--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="calendar" >
     </div>
-    <audio autoplay loop>
-         <source src="files/christmas-jingle-bells-347486.mp3" type="audio/mpeg">
+    <audio id="music" autoplay loop muted>
+         <source src="./files/christmas-jingle-bells-347486.mp3" type="audio/mpeg">
     </audio>
 </body>
 </html>
